# tfpr_backend_adapter

./: .gitignore  dev_config.yaml  pyproject.toml
app/: config.py  dataset_catalog.py  dependencies.py  exceptions.py  main.py  schemas.py
app/routers/: _query_utils.py  active_set_config.py  analysis.py  datacard.py  discovery.py  query.py  schema.py
tests/: conftest.py  test_analysis.py  test_discovery.py  test_query.py  test_schema.py
