[tool.poetry]
name = "tfbp-backend"
version = "0.1.0"
description = "FastAPI REST API wrapping the tfbpapi SDK"
authors = ["BrentLab"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
pydantic-settings = "^2.7"
tfbpapi = {git = "https://github.com/BrentLab/tfbpapi", rev = "dev"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
httpx = "^0.28"
pytest-asyncio = "^0.26"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = ["test_*.py"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
